--- a/styles/partials/_search.scss
+++ b/styles/partials/_search.scss
@@ -12,8 +12,15 @@ body {
   &__heading {
     font-size: 3.5rem;
     color: $color-font-heading;
+    margin-bottom: 1rem;
   }
   margin: 2rem auto;
+}
+
+#site-search__form {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .form-label {
@@ -26,10 +33,24 @@ body {
 }
 
 #button {
-  padding: 0 2.75rem;
-  font-size: 1rem;
+  padding: 0.5rem 4rem;
+  font-size: 1.25rem;
   border: 1px solid $color-font-heading;
   color: $color-font-heading;
-  border-radius: 10px;
+  border-radius: 50px;
   background-color: transparent;
+}
+
+#button:hover {
+  background-color: $color-font-heading;
+  color: $color-font-primary;
+  transform: scale(1.05);
+}
+
+.selectGenres {
+  width: 30%;
+  margin-right: 2.5rem;
+}
+.selectLanguage {
+  width: 30%;
 }
