--- a/styles/partials/_card.scss
+++ b/styles/partials/_card.scss
@@ -10,33 +10,39 @@
         &__item {
             width: 20%;
             margin-right: 2rem;
+            margin: 1rem;
         }
     }
 }
 
 .item-card {
-    margin-bottom: 1rem;
     color: $color-font-primary;
     font-size: 1rem;
     width: 100%;
+    margin: 1rem;
     &__img {
         border-radius: 5px;
-        margin-bottom: 0.5rem;
         box-shadow: 0 0 6px #fff, rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
     }
     &__name {
-        width: 100%;
-        padding-bottom: 0.75rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 10rem;
+        padding: 0.75rem 0;
     }
     &__date {
         font-size: 0.1em;
     }
     &__btn {
-        &--like {
-            border: none;
-            border-radius: .1rem;
-            color: lightgray;
-            padding: .3rem;
+        margin: .5rem 0;
+        border: none;
+        color: grey;
+        padding: .5rem .7rem;
+        border-radius: .5rem;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.1);
         }
         &--liked {
             color: gold;
@@ -48,4 +54,9 @@
         padding: 1rem;
         border-radius: 30px;
     }
+}
+
+.wrapper {
+    max-width: 1920px;
+    margin: 0 auto;
 }
